# esp32-eink-screen

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md  build.rs  display.patch  flake.nix  info.txt  partitions.csv  requirements.txt  rustfmt.toml  shell.nix  test_jiff.rs
.cargo/: config.toml
.github/workflows/: rust_ci.yml
.zed/: settings.json  tasks.json
certs/: cert-mix.pem
display-simulator/: Cargo.toml  build.rs
display-simulator/.cargo/: config.toml
display-simulator/src/: main.rs
esp-rs/: default.nix  rust.nix
src/: display.rs  hardware.rs  init.rs  lib.rs  main.rs  networking.rs  parsing.rs  process.rs  server.rs  storage.rs  wifi.rs
static/: index.html
templates/: index.html
vcal-parser/: Cargo.toml
vcal-parser/src/: calendars.rs  lib.rs  vevent.rs
web/: calendar-config.html  config.html  credentials.html  index.html
web-test/: Cargo.toml  bacon.toml  build.rs
web-test/src/: defmt_stub.rs  main.rs
