[workspace]
members = [
    "vcal-parser"
]

[package]
edition      = "2021"
name         = "esp32-thesis"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32-thesis"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "log-04", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log = "0.4.27"

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "log",
  "tcp",
  "dns"
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "esp-alloc",
  "esp32s3",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = { version = "0.5.0", features = ["gatt"] }

critical-section = "1.2.0"
static_cell = { version = "2.1.1" }

weact-studio-epd = { path = "/home/xrtxn/programming/rust/thesis/weact-fork/", features = ["blocking"] }
embedded-graphics = "0.8.1"
profont = "0.7.0"
display-interface-spi = "0.5.0"
embedded-hal-bus = "0.3.0"
#reqwless = { path = "/home/xrtxn/programming/rust/thesis/reqwless/", features = ["esp-mbedtls", "log"] }
reqwless = { git = "https://github.com/xrtxn/reqwless.git", branch="thesis", default-features = false, features = ["log", "esp-mbedtls", "alloc"] }
#embedded-tls = { version = "0.17", default-features = false, features = ["log", "alloc"] }
#reqwless = { git = "https://github.com/drogue-iot/reqwless.git", default-features = false, features = ["esp-mbedtls","log"] }
#reqwless = { git = "https://github.com/drogue-iot/reqwless.git", rev="311060f9dcfe065941fa224139786fe3c205e71b", features = ["log"] }
esp-mbedtls = { git = "https://github.com/AnthonyGrondin/esp-mbedtls.git", branch="update/1.0.0", features = ["esp32s3"] }
roxmltree = { version = "0.21.1", default-features = false }

[build-dependencies]
vergen = { version = "9.0.6", features = ["build"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false

[profile.dev.package.esp-radio]
opt-level = 3

[patch."https://github.com/esp-rs/esp-mbedtls.git"]
esp-mbedtls = { git = "https://github.com/AnthonyGrondin/esp-mbedtls.git", branch = "update/1.0.0" }
