[workspace]
resolver = "3"
members = [
    "vcal-parser",
    "display-simulator",
    "web-test"
]

[package]
edition      = "2024"
name         = "esp32-thesis"
rust-version = "1.93"
version      = "0.1.0"

[[bin]]
name = "esp32-thesis"
path = "./src/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "log-04", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log = "0.4.27"

embassy-net = { version = "=0.8.0", features = [
  "dhcpv4",
  "log",
  "tcp",
  "udp",
  "dns"
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
embassy-futures = "0.1.2"
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32s3",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
portable-atomic = { version = "1", features = ["critical-section"] }
static_cell = { version = "2.1.1", features = ["nightly"] }

weact-studio-epd = { git = "https://github.com/xrtxn/weact-studio-epd.git", branch = "feat/4.2_support" }
embedded-hal-async = "1.0.0"
embedded-graphics = "0.8.1"
profont = "0.7.0"
display-interface-spi = "0.5.0"
display-interface = "0.5.0"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embassy-embedded-hal = "0.5.0"

heapless = { version = "0.9.2", features = ["serde"] }

# Caldav
reqwless = { git = "https://github.com/xrtxn/reqwless.git", branch="main", default-features = false, features = ["log", "mbedtls-rs"] }
mbedtls-rs = { git = "https://github.com/esp-rs/mbedtls-rs.git" }
roxmltree = { version = "0.21.1", default-features = false }
vcal-parser = { path = "./vcal-parser" }
jiff = { version = "0.2.22", default-features = false, features = ["alloc"] }

# NTP
sntpc = { version = "0.8", default-features = false }
sntpc-net-embassy = "0.8"

# Web server
picoserve = { version = "0.18.0", features = ["embassy", "log", "alloc", "json"] }

# DHCP server (for AP mode)
edge-dhcp = { version = "0.7", features = ["log"] }
edge-nal = "0.6"
edge-nal-embassy = { version = "0.8", default-features = false, features = ["udp", "proto-ipv4", "medium-ethernet", "log"] }

# NVS
postcard = "1.1.0"
serde = { version = "1.0.*", default-features = false, features = ["derive"] }
esp-storage = { version = "0.8.1", features = ["esp32s3"] }
sequential-storage = { version = "7.1.0", features = ["postcard"] }
embassy-sync = "0.7.2"
fluent-uri = { version = "0.4.1", default-features = false }

[build-dependencies]
vergen = { version = "9.0.6", features = ["build"] }
dotenvy = { version = "0.15"}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false

[profile.dev.package.esp-radio]
opt-level = 3

[profile.dev.package.esp-storage]
opt-level = 3
