[package]
name = "display-simulator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "display-simulator"
path = "src/main.rs"

[dependencies]
embedded-graphics = "0.8.1"
profont = "0.7.0"
jiff = { version = "0.2.22", features = ["std"] }
heapless = "0.9.2"
log = "0.4.27"
env_logger = "0.11"
weact-studio-epd = { git = "https://github.com/xrtxn/weact-studio-epd.git", branch = "feat/4.2_support" }
embedded-graphics-simulator = "0.8.0"
