[package]
name = "web-test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "web-test"
path = "src/main.rs"

[dependencies]
picoserve = { version = "0.18.0", features = ["std", "log", "alloc", "json", "tokio"] }
embassy-sync = { version = "0.7.2", features = ["std"] }
embassy-executor = { version = "0.9.1", features = ["log", "arch-std"] }
embassy-net = { version = "0.8", features = ["log", "tcp", "std", "proto-ipv4", "medium-ethernet"] }
heapless = { version = "0.9.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "std"] }
log = "0.4.27"
tokio = { version = "1.0", features = ["full"] }
static_cell = "2.1.1"
smoltcp = { version = "0.12.0", default-features = false, features = ["std", "proto-ipv4", "medium-ethernet", "socket-tcp"] }
